[package]
name = "full_text_search"
version = "0.1.0"
authors = ["Evan Hruskar <hruskar.evan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.4.0"
regex = "1.3.9"